# Dramatic_Image_Extrapolation_Implementation

./: Bgi.txt  CV_ Dramatic Image Extrapolation.gslides  README.md  alpha_exp.cpp  alpha_exp_final.cpp  computeM.m  compute_featurevector.m  compute_transformed_patch.m  extract_bound.m  get_rgb_value_by_bi.m  hog_features.m  is_patch_contained.m  main.m  main.m~  pre_alpha_extra.m  pre_pro_alpha.m  process_branch.asv  process_branch.m  project_paper.xoj  reconstruct_image.m  recontruct_image.m  transform_im.m
gco-v3.0/: CMakeLists.txt  alpha_exp.cpp  alpha_exp_final.cpp
gco-v3.0/parv_build/: CMakeCache.txt  Makefile  alpha_exp  alpha_exp_final  cmake_install.cmake  example
temp_result/: down_point_5_theatre.mat  final_output_transformation.txt  final_output_translation.txt  raw_smoothness_cost.txt  raw_smoothness_cost_0.txt  raw_smoothness_cost_1.txt  raw_smoothness_cost_10.txt  raw_smoothness_cost_11.txt  raw_smoothness_cost_12.txt  raw_smoothness_cost_13.txt  raw_smoothness_cost_14.txt  raw_smoothness_cost_15.txt  raw_smoothness_cost_16.txt  raw_smoothness_cost_17.txt  raw_smoothness_cost_18.txt  raw_smoothness_cost_19.txt  raw_smoothness_cost_2.txt  raw_smoothness_cost_3.txt  raw_smoothness_cost_4.txt  raw_smoothness_cost_5.txt  raw_smoothness_cost_6.txt  raw_smoothness_cost_7.txt  raw_smoothness_cost_8.txt  raw_smoothness_cost_9.txt  shift_map_0.txt  shift_map_1.txt  shift_map_10.txt  shift_map_11.txt  shift_map_12.txt  shift_map_13.txt  shift_map_14.txt  shift_map_15.txt  shift_map_16.txt  shift_map_17.txt  shift_map_18.txt  shift_map_19.txt  shift_map_2.txt  (+30 more)
(+244 files in other folders)
